@@ -15,16 +15,15 @@
 		<junit.version>5.9.3</junit.version>
 		<archunit.version>1.0.1</archunit.version>
 		<sonar.version>3.9.1.2184</sonar.version>
-		<surefire.version>3.0.0</surefire.version>
 		<jacoco.version>0.8.10</jacoco.version>
+		<maven.compiler.compilerArgument>-Xlint:-processing</maven.compiler.compilerArgument>
+		<maven.compiler.failOnWarning>true</maven.compiler.failOnWarning>
+
 		<maven.checkstyle.version>3.1.2</maven.checkstyle.version>
 		<checkstyle.version>10.3.2</checkstyle.version>
 		<asm.version>9.4</asm.version>
 
-		<jvm.options>
-			--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
-			java.base/java.math=ALL-UNNAMED
-		</jvm.options>
+
 
 	</properties>
 
@@ -132,15 +131,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire.version}</version>
-
-				<configuration>
-					<argLine>@{argLine} ${jvm.options}</argLine>
-				</configuration>
 			</plugin>
 
 
